# src/main/resources/users-api-contract.yml
@@ -96,6 +96,12 @@ paths:
           required: false
           schema:
             type: string
+        - name: Authorization
+          in: header
+          description: authorization
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: successful operation
